fix cart div scrollable when overflow

--- a/src/components/nav.styles.scss
+++ b/src/components/nav.styles.scss
@@ -260,6 +260,7 @@
   #side-nav {
     background-color: white;
     position: fixed;
+    overflow: auto;
     right: 0;
     z-index: 10;
     height: 100%;
@@ -267,6 +268,26 @@
     width: 100%;
     max-width: 400px;
     box-shadow: 0px 4px 85px -10px #220f0067;
+      
+    &::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.05);
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.05);
+      border-radius: 20px;
+      background-color: #f5f5f555;
+    }
+
+    &::-webkit-scrollbar {
+      width: 4px;
+      height: 0px;
+      background-color: #f5f5f555;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 20px;
+      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.05);
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.05);
+      background-color: #220f0077;
+    }
   }
   #down-nav {
     background-color: #220f00;
